--- a/layouts/partials/extended_footer.html
+++ b/layouts/partials/extended_footer.html
@@ -1,4 +1,4 @@
-<div style="margin-bottom: 40px;">
+<div style="margin-bottom: 40px; word-break: break-all;">
     Twitter: <a href="https://twitter.com/h4ckbs">@h4ckbs</a></br>
     Instagram: <a href="https://instagram.com/h4ckbs">@h4ckbs</a></br>
     Onion: <a href="http://hackbs4th6cqmfznxrmgsvbrruddb5ecx3pjdhxyztnemo6y4hiv64id.onion">hackbs4th6cqmfznxrmgsvbrruddb5ecx3pjdhxyztnemo6y4hiv64id.onion</a>
