--- a/layouts/partials/extended_footer.html
+++ b/layouts/partials/extended_footer.html
@@ -1,5 +1,6 @@
-<div style="margin-bottom: 40px; word-break: break-all;">
+<div style="margin-bottom: 40px; word-break: break-all; text-align: center;">
     Twitter: <a href="https://twitter.com/h4ckbs">@h4ckbs</a></br>
     Instagram: <a href="https://instagram.com/h4ckbs">@h4ckbs</a></br>
+    Nostr: <a href="nostr:npub1h4ck8saqtmdph5ncn6yx5kxs22hxwww309kmr5zzqcy4snsjuv8qyku6gg">@npub1h4ck8saqtmdph5ncn6yx5kxs22hxwww309kmr5zzqcy4snsjuv8qyku6gg</a></br>
     Onion: <a href="http://hackbs4th6cqmfznxrmgsvbrruddb5ecx3pjdhxyztnemo6y4hiv64id.onion">hackbs4th6cqmfznxrmgsvbrruddb5ecx3pjdhxyztnemo6y4hiv64id.onion</a>
 </div>
