--- a/layouts/shortcodes/iframe.html
+++ b/layouts/shortcodes/iframe.html
@@ -1,1 +1,1 @@
-<iframe src="{{ .Get 0 }}" style="width: 100%; height: 1500px; border: 0px;"></iframe>
+<iframe src="{{ .Get 0 }}" style="width: 100%; height: {{ .Get 1 }}; border: 0px;"></iframe>
